--- a/.env
+++ b/.env
@@ -26,7 +26,7 @@ APP_SECRET=25bf5d9ae27b3cb5d177e5fe65762901
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:61032/app?serverVersion=15&charset=utf8"
+DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:50217/app?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/mercure-bundle ###
@@ -54,3 +54,9 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 # MAILER_DSN=brevo+api://KEY@default
 # MAILER_DSN=brevo+smtp://USERNAME:PASSWORD@default
 ###< symfony/brevo-mailer ###
+
+###> symfony/lock ###
+# Choose one of the stores below
+# postgresql+advisory://db_user:db_password@localhost/db_name
+LOCK_DSN=flock
+###< symfony/lock ###
