--- a/composer.json
+++ b/composer.json
@@ -22,22 +22,28 @@
         "symfony/console": "7.0.*",
         "symfony/dotenv": "7.0.*",
         "symfony/flex": "^2",
+        "symfony/form": "7.0.*",
         "symfony/framework-bundle": "7.0.*",
+        "symfony/lock": "7.0.*",
         "symfony/mercure-bundle": "^0.3.8",
         "symfony/messenger": "7.0.*",
         "symfony/property-access": "7.0.*",
         "symfony/property-info": "7.0.*",
+        "symfony/rate-limiter": "7.0.*",
         "symfony/runtime": "7.0.*",
+        "symfony/security-bundle": "7.0.*",
         "symfony/serializer": "7.0.*",
         "symfony/stimulus-bundle": "^2.13",
         "symfony/twig-bundle": "7.0.*",
         "symfony/ux-react": "^2.13",
         "symfony/ux-turbo": "^2.13",
         "symfony/ux-twig-component": "^2.13",
+        "symfony/validator": "7.0.*",
         "symfony/web-link": "7.0.*",
         "symfony/webpack-encore-bundle": "^2.1",
         "symfony/yaml": "7.0.*",
         "symfonycasts/sass-bundle": "^0.3.0",
+        "symfonycasts/verify-email-bundle": "^1.16",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0"
     },
@@ -101,6 +107,8 @@
         "symfony/mailer": "7.0.*",
         "symfony/maker-bundle": "^1.52",
         "symfony/panther": "^2.1",
-        "symfony/phpunit-bridge": "^7.0"
+        "symfony/phpunit-bridge": "^7.0",
+        "symfony/stopwatch": "7.0.*",
+        "symfony/web-profiler-bundle": "7.0.*"
     }
 }
