--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "dependencies": {
         "prop-types": "^15.8.1",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "stimulus-content-loader": "^4.2.0",
+        "stimulus-use": "^0.52.1"
     }
 }
