--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,12 @@
         "php": ">=8.3.0",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "cakedc/oauth2-cognito": "^2.0",
         "doctrine/doctrine-bundle": "^2.11",
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^2.17",
         "knplabs/knp-menu-bundle": "^3.3",
+        "knpuniversity/oauth2-client-bundle": "^2.18",
         "nelmio/security-bundle": "^3.1",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.24",
